--- a/src/css/index.css
+++ b/src/css/index.css
@@ -6,7 +6,7 @@ body {
 #cabecalho {
     background: linear-gradient(180deg, #187D22 81.77%, #2D2D2D 100%);
     width: 100%;
-    height: 160px;
+    height: 24.5vh;
 }
 
 #cabecalho img {
@@ -16,13 +16,15 @@ body {
 }
 
 #cabecalho h1 {
-    width: 30%;
+    font-size: 20pt;
+    width: 40%;
     position: relative;
     top: -25%;
     left: 7%;
+    margin: 0%;
 }
 
-#cabecalho a{
+#cabecalho a {
     color: #000;
     text-decoration: none;
 }
@@ -39,19 +41,21 @@ body {
     line-height: normal;
     position: relative;
     left: 60%;
-    top: -28%;
+    top: -20%;
     margin: 0% 3% 0% 0%;
 
     width: 10%;
-    height: 34px;
-    padding: 5px;
+    height: 5vh;
+    padding: 0.1%;
     flex-shrink: 0;
     border-radius: 15px;
     border: 3px solid #000;
     background: #828282;
 }
 
-.beneficios:hover, .sobre:hover, .cadastre-se:hover {
+.beneficios:hover,
+.sobre:hover,
+.cadastre-se:hover {
     background-color: rgb(50, 50, 50);
     cursor: pointer;
 }
@@ -60,7 +64,7 @@ body {
     position: absolute;
     background: url(img/fundo.png), lightgray 50% / cover no-repeat;
     width: 100%;
-    height: 101%;
+    height: 101vh;
 }
 
 #rodape {
@@ -68,7 +72,7 @@ body {
     top: 125%;
     background: linear-gradient(180deg, #2D2D2D 0%, #187D22 36.46%);
     width: 100%;
-    height: 100px;
+    height: 15vh;
     flex-shrink: 0;
 }
 
@@ -81,7 +85,7 @@ body {
     text-align: center;
     text-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
     font-family: Inika;
-    font-size: 16px;
+    font-size: 100%;
     font-style: normal;
     font-weight: 400;
     line-height: normal;
@@ -96,7 +100,7 @@ body {
     color: #000;
     text-align: left;
     font-family: Inter;
-    font-size: 24px;
+    font-size: 150%;
     font-style: normal;
     font-weight: 400;
     line-height: normal;
@@ -108,6 +112,118 @@ body {
     margin: 0% 1% 0% 0%;
 }
 
-@media screen {
+@media screen and (max-width: 768px) {
+
+    #cabecalho {
+        background: linear-gradient(180deg, #187D22 81.77%, #2D2D2D 100%);
+        width: 100%;
+        height: 24.5vh;
+    }
+
+    #cabecalho img {
+        position: relative;
+        width: 5%;
+        top: 5%;
+        left: 50%;
+        transform: translate(-50%);
+    }
+
+    #cabecalho h1 {
+        position: relative;
+        width: 60%;
+        font-size: 100%;
+        top: -0%;
+        left: 50%;
+        transform: translate(-50%);
+        text-align: center;
+    }
+
+    #cabecalho span{
+        display: none;
+    }
+
+    #cabecalho a {
+        color: #000;
+        text-decoration: none;
+    }
+
+    .beneficios,
+    .sobre,
+    .cadastre-se {
+        box-sizing: border-box;
+        color: #000;
+        text-align: center;
+        font-family: Inika;
+        font-size: 75%;
+        font-style: normal;
+        font-weight: 400;
+        line-height: normal;
+        position: relative;
+        left: 4%;
+        top: 10%;
+        margin: 0% 0% 0% 0%;
     
+        width: 30%;
+        height: 5vh;
+        padding: 0.1%;
+        flex-shrink: 0;
+        border-radius: 0px;
+        border: 3px solid #000;
+        background: #828282;
+    }
+
+    #conteudo {
+        position: absolute;
+        background: url(img/fundo.png), lightgray 50% / cover no-repeat;
+        width: 100%;
+        height: 101vh;
+    }
+
+    #rodape {
+        position: absolute;
+        top: 125%;
+        background: linear-gradient(180deg, #2D2D2D 0%, #187D22 36.46%);
+        width: 100%;
+        height: 15vh;
+        flex-shrink: 0;
+    }
+
+    #rodape p {
+        position: relative;
+        top: 5%;
+        margin: 0%;
+
+        color: #FFF;
+        text-align: center;
+        text-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
+        font-family: Inika;
+        font-size: 50%;
+        font-style: normal;
+        font-weight: 400;
+        line-height: normal;
+    }
+
+    #rodape h3 {
+        width: 50%;
+        margin: 0% 0% 0.5% 0%;
+        position: relative;
+        top: 15%;
+        left: 3%;
+
+        color: #000;
+        text-align: left;
+        font-family: Inter;
+        font-size: 100%;
+        font-style: normal;
+        font-weight: 400;
+        line-height: normal;
+    }
+
+    #rodape img {
+        position: relative;
+        width: 5%;
+        top: 15%;
+        left: 5%;
+        margin: 0% 1% 0% 0%;
+    }
 }
