--- a/src/css/motivacao.css
+++ b/src/css/motivacao.css
@@ -19,6 +19,8 @@ body {
     left: 50%;
     transform: translate(-50%);
     top: 10%;
+    width: 25%;
+    height: 20vh;
 }
 
 #cabecalho div {
@@ -42,7 +44,7 @@ body {
     color: #000;
     text-align: center;
     font-family: Inika;
-    font-size: 220%;
+    font-size: 200%;
     font-style: normal;
     font-weight: 400;
     line-height: normal;
@@ -153,7 +155,7 @@ body {
     color: #000;
     text-align: center;
     font-family: Inika;
-    font-size: 175%;
+    font-size: 120%;
     font-style: normal;
     font-weight: 400;
     line-height: normal;
@@ -179,6 +181,120 @@ body {
     height: 15vh;
 }
 
-@media screen {
-    
+@media screen and (max-width: 768px) {
+
+    #cabecalho {
+        margin-bottom: 30%;
+        width: 100%;
+        height: 25vh;
+        flex-shrink: 0;
+        border-bottom: 3px solid #000;
+        background: #187D22;
+        
+    }
+
+    #cabecalho img {
+        position: relative;
+        left: 50%;
+        transform: translate(-50%);
+        top: 10%;
+        width: 30%;
+        height: 20vh;
+    }
+
+    #cabecalho div {
+        position: relative;
+        top: -10%;
+        left: 50%;
+        transform: translate(-50%);
+
+        width: 70%;
+        height: 10vh;
+        flex-shrink: 0;
+
+        border-radius: 0px 0px 15px 15px;
+        border-right: 3px solid #000;
+        border-bottom: 3px solid #000;
+        border-left: 3px solid #000;
+        background: #187D22;
+    }
+
+    #cabecalho div p {
+        color: #000;
+        text-align: center;
+        font-family: Inika;
+        font-size: 150%;
+        font-style: normal;
+        font-weight: 400;
+        line-height: normal;
+    }
+
+    #conteudo {
+        display: block;
+        width: 100%;
+    }
+
+    .secao-1,
+    .secao-1,
+    .secao-1 {
+        box-sizing: border-box;
+        top: 10%;
+        display: block;
+    }
+
+    .secao-1 p,
+    .secao-2 p,
+    .secao-3 p {
+        margin: 10% 0% 30% 0%;
+        width: 90%;
+        height: 20vh;
+        display: block;
+        color: #000;
+        text-align: justify;
+        font-family: Inika;
+        font-size: 125%;
+        font-style: normal;
+        font-weight: 400;
+        line-height: normal;
+    }
+    .secao-2 p{
+        margin-left: 5%;
+    }
+
+    .secao-1 img,
+    .secao-2 img,
+    .secao-3 img {
+        display: none;
+    }
+
+    .serdoador {
+        position: relative;
+        left: 50%;
+        transform: translate(-50%);
+        top: -50%;
+        width: 30%;
+        height: 5vh;
+
+        border-radius: 15px;
+        border: solid black 3px;
+        background-color: gray;
+
+        color: #000;
+        text-align: center;
+        font-family: Inika;
+        font-size: 75%;
+        font-style: normal;
+        font-weight: 400;
+        line-height: normal;
+    }
+
+    #rodape {
+        position: relative;
+        bottom: 0;
+
+        background: linear-gradient(180deg, #2D2D2D 0%, #187D22 36.46%);
+        width: 100%;
+        height: 10vh;
+    }
+
 }
